# LMCEngine

./: .clang-format  .gitignore  CMakeLists.txt  main.cpp  readme.md  test.txt
Engine/: CMakeLists.txt  Engine.cpp  Engine.hpp
Engine/Core/: CMakeLists.txt  Core.hpp
Engine/Core/Algorithm/: ConstexprAlg.hpp  StringAlgorithm.hpp
Engine/Core/Audio/: Audio.cpp  Audio.hpp  AudioEngine.cpp  AudioEngine.hpp  AudioHandle.cpp  AudioHandle.hpp  CMakeLists.txt
Engine/Core/Audio/AudioEngineImpl/: AudioEngineNone.inl  AudioEngine_irrKlang.inl  AudioEngine_miniaudio.inl
Engine/Core/Audio/AudioHandleImpl/: AudioHandleNone.inl  AudioHandle_irrKlang.inl  AudioHandle_miniaudio.inl
Engine/Core/Concept/: CMakeLists.txt  Concept.cpp  Concept.hpp  ConceptApplicable.cpp  ConceptApplicable.hpp  ConceptCoordinate.cpp  ConceptCoordinate.hpp  ConceptCore.hpp  ConceptCoreRuntime.hpp  ConceptCoreRuntime.inl  ConceptCoreToImGuiImpl.hpp  ConceptFetchCache.cpp  ConceptList.cpp  ConceptList.hpp  ConceptRenderable.cpp  ConceptRenderable.hpp  ConceptSetCache.hpp  ConceptSetCache.inl  ConceptSetFetchCache.hpp  ConceptSetFetchCache.inl  PureConcept.cpp  PureConcept.hpp  PureConceptAABB.cpp  PureConceptAABB.hpp  PureConceptAABBBox.cpp  PureConceptAABBBox.hpp  PureConceptAABBSquare.cpp  PureConceptAABBSquare.hpp  PureConceptCoordinate.cpp  PureConceptCoordinate.hpp
Engine/Core/Environment/: CMakeLists.txt  Environment.cpp  Environment.hpp  GlobalResourcePool.cpp  GlobalResourcePool.hpp
Engine/Core/Exception/Runtime/: ImGuiContextInvalid.hpp
Engine/Core/File/: CMakeLists.txt  OSFile.cpp  OSFile.hpp
Engine/Core/Graphic/: CMakeLists.txt
Engine/Core/Graphic/API/: GraphicAPI.hpp  OpenGL.hpp
Engine/Core/Graphic/Camera/: CMakeLists.txt  FirstPersonCameraController.cpp  FirstPersonCameraController.hpp  PureConceptCamera.cpp  PureConceptCamera.hpp  PureConceptCameraStack.cpp  PureConceptCameraStack.hpp  PureConceptOrthoCamera.cpp  PureConceptOrthoCamera.hpp  PureConceptPerspectiveCamera.cpp  PureConceptPerspectiveCamera.hpp
Engine/Core/Graphic/Canvas/: CMakeLists.txt  Canvas.cpp
Engine/Core/Graphic/HotReloadFrameBuffer/: CMakeLists.txt  HotReloadFrameBuffer.cpp  HotReloadFrameBuffer.hpp
Engine/Core/Graphic/Image/: CMakeLists.txt  PureConceptImage.cpp  PureConceptImage.hpp
Engine/Core/Graphic/Material/: CMakeLists.txt  Material.cpp  Material.hpp
Engine/Core/Graphic/Mesh/: CMakeLists.txt  ConceptMesh.cpp  ConceptMesh.hpp  RenderableMesh.cpp  RenderableMesh.hpp  RenderableMeshCluster.cpp  RenderableMeshCluster.hpp  RenderableMeshHitBox.cpp  RenderableMeshHitBox.hpp
Engine/Core/Graphic/Shader/: CMakeLists.txt  Shader.cpp  Shader.hpp  ShaderProgram.cpp  ShaderProgram.hpp
Engine/Core/Graphic/Sprites/: CMakeLists.txt  Sprite.cpp  Sprite.hpp  SpriteSquare.cpp  SpriteSquare.hpp  SpriteSquareAnimatedTexture.cpp  SpriteSquareAnimatedTexture.hpp  SpriteSquareTexture.cpp  SpriteSquareTexture.hpp
Engine/Core/Graphic/Texture/: CMakeLists.txt  Texture.cpp  Texture.hpp
Engine/Core/Input/: CMakeLists.txt  UserInput.cpp  UserInput.hpp
Engine/Core/Input/Serializer/: CMakeLists.txt  SerializerModel.cpp  SerializerModel.hpp
Engine/Core/Math/: CMakeLists.txt
Engine/Core/Math/Random/: FastRandom.hpp  FastRandom.inl
Engine/Core/Network/: CMakeLists.txt  NetClient.cpp  NetClient.hpp  NetController.cpp  NetController.hpp  NetPlatform.hpp  NetServer.cpp  NetServer.hpp
Engine/Core/Physics/: CMakeLists.txt  PhysicsEngine.cpp  PhysicsEngine.hpp  PhysicsScene.cpp  PhysicsScene.hpp
Engine/Core/Physics/Collider/: CMakeLists.txt  Collider.cpp  Collider.hpp  ColliderMesh.cpp  ColliderMesh.hpp  PureConceptCollider.cpp  PureConceptCollider.hpp
Engine/Core/Physics/Controller/: CMakeLists.txt  EntityPhyController.cpp  EntityPhyController.hpp  PhyController.cpp  PhyController.hpp  PhyControllerEntity.cpp  PhyControllerEntity.hpp  PhyControllerEntityPlayer.cpp  PhyControllerEntityPlayer.hpp
Engine/Core/Physics/Queries/: CMakeLists.txt  RayCast.cpp  RayCast.hpp
Engine/Core/Physics/RigidBody/: CMakeLists.txt  RigidBody.cpp  RigidBody.hpp  RigidMesh.cpp  RigidMesh.hpp
Engine/Core/Project/: CMakeLists.txt  Project.cpp  Project.hpp
Engine/Core/Runtime/: CMakeLists.txt
Engine/Core/Runtime/Assertion/: Assertion.cpp  Assertion.hpp  CMakeLists.txt
Engine/Core/Runtime/DynamicLibrary/: CMakeLists.txt  DynamicConcept.cpp  DynamicConcept.hpp  DynamicLibrary.cpp  DynamicLibrary.hpp
Engine/Core/Runtime/ExternalProgram/: ProgramExecute.hpp
Engine/Core/Scene/: CMakeLists.txt
Engine/Core/Scene/Entity/: CMakeLists.txt  Entity.cpp  Entity.hpp  EntityRenderable.cpp  EntityRenderable.hpp
Engine/Core/Scene/Orientation/: CMakeLists.txt  Orientation.cpp  Orientation.hpp  OrientationCoordinate.cpp  OrientationCoordinate.hpp  OrientationMatrix.cpp  OrientationMatrix.hpp  OrientationRotation.cpp  OrientationRotation.hpp  Vec3.hpp
Engine/Core/UI/: CMakeLists.txt  RectButton.cpp  RectButton.hpp  RectInput.cpp  RectInput.hpp
Engine/Core/UI/Canvas/: CMakeLists.txt  Canvas.cpp  Canvas.hpp
Engine/Core/UI/Font/: CMakeLists.txt  Font.cpp  Font.hpp
Engine/Core/UI/Text/: CMakeLists.txt  Text.cpp  Text.hpp
Engine/Core/Utilities/: PlatformSysUtilities.hpp  StopWatch.hpp
Engine/Core/Window/: CMakeLists.txt  EditorWindow.cpp  EditorWindow.hpp  GLFWWindow.cpp  GLFWWindow.hpp  GameWindow.cpp  GameWindow.hpp  Window.hpp  WindowPool.cpp  WindowPool.hpp  WindowPool.inl
Engine/Core/Window/API/: GLFW.hpp
Engine/Test/: CMakeLists.txt  Catch2Test.cpp  ConceptTest.cpp  NetTest.cpp  Particle.cpp
cmake/: defines.cmake  (+4 more)
test/ADanceOfFireAndIce/: ADanceOfFireAndIce.lmce  CMakeLists.txt  main.cpp  vcpkg.json
test/ADanceOfFireAndIce/Access/Texture/: bar.kra  tolerance.kra
test/ADanceOfFireAndIce/Assets/Texture/: tolerance.kra
test/ADanceOfFireAndIce/Editor/: layout.ini
test/ADanceOfFireAndIce/Source/: CMakeLists.txt
test/Sanguis/: CMakeLists.txt  Sanguis.lmce  main.cpp  vcpkg-configuration.json  vcpkg.json
test/Sanguis/Editor/: layout.ini
test/Sanguis/Source/: CMakeLists.txt
test/Sanguis/Triplets/: engine-triplets.cmake
(+108 files in other folders)
