add_subdirectory(Math)
add_subdirectory(Network)
add_subdirectory(File)
add_subdirectory(Graphic)
add_subdirectory(Input)
add_subdirectory(Audio)
add_subdirectory(Scene)
add_subdirectory(Concept)
add_subdirectory(Runtime)
add_subdirectory(Physics)
add_subdirectory(UI)
add_subdirectory(Window)
add_subdirectory(Project)
add_subdirectory(Environment)